--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
  <!-- font awesome -->
  <link rel="stylesheet" href="./css/all.css">
+ <link rel="stylesheet" href="home.css">
  <title>budget app</title>
  <style>
  </style>
